@@ -29,6 +29,7 @@ TODO: faq, process a thing in each iteration
         - include sys/syscall.h instead of plain syscall.h.
         - check for io watcher loops in ev_verify, check for the most
           common reported usage bug in ev_io_start.
+        - chose socket vs. WSASocket at compiletime using EV_USE_WSASOCKET.
 
 4.11 Sat Feb  4 19:52:39 CET 2012
 	- INCOMPATIBLE CHANGE: ev_timer_again now clears the pending status, as
